--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "boto3>=1.42.58",
+    "ibind>=0.1.22",
+    "interactive-broker-python-web-api>=0.1.2",
     "pycryptodome>=3.23.0",
     "requests>=2.32.5",
 ]
